buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath 'org.flywaydb:flyway-database-postgresql:11.7.2'
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'org.flywaydb.flyway' version '11.7.2'
}

flyway {
	url = 'jdbc:postgresql://localhost:5432/lexia'
	user = 'postgres'
	password = '1234'
}

group = 'com.lexia'
version = '0.0.1-SNAPSHOT'
description = 'Backend API for Lexia, an AI-powered language learning ecosystem.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.stripe:stripe-java:24.13.0'
	implementation 'org.springframework.security:spring-security-messaging'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	
	// File metadata extraction (image dimensions, audio duration)
	implementation 'com.drewnoakes:metadata-extractor:2.19.0'
	
	// Email service dependencies
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.jsoup:jsoup:1.17.2'
	
	// Google Gemini AI SDK (Official)
	implementation 'com.google.genai:google-genai:1.30.0'
	
	// Resilience4j for circuit breaker, retry, rate limiter
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-retry:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-timelimiter:2.2.0'
	
	// Spring Cache with Caffeine (for prompt template caching)
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// Dotenv support for loading .env files
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport // Generate coverage report after tests
}

jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test // Tests must run before generating report
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
				'**/dto/**',
				'**/entity/**',
				'**/config/**',
				'**/BackendApplication.class'
			])
		}))
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.60 // 60% coverage requirement (temporarily reduced)
			}
		}
	}
}

check.dependsOn jacocoTestCoverageVerification

